--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
-    "openai": "^4.85.1",
+    "openai": "^4.86.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
